--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "@babel/cli": "^7.15.7",
     "@babel/node": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
+    "@prisma/client": "^3.3.0",
     "apollo-server": "^3.4.0",
     "graphql": "^15.6.1",
     "nodemon": "^2.0.14"
   },
   "devDependencies": {
-    "@babel/core": "^7.15.8"
+    "@babel/core": "^7.15.8",
+    "prisma": "^3.3.0"
   }
 }
